fixed the margin on the navbar so it doesn't center on small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,9 @@
+/*
 .navbar-margins{
-    margin-left: 26.3%;
-    margin-right: 26.3%;
+    margin-left: ;
+    margin-right: ;
 }
+*/
 
 .nav-logo {
     max-height: 60px;
